--- a/개념 정리/C#_문법종합반_5주차_정렬_알고리즘.md
+++ b/개념 정리/C#_문법종합반_5주차_정렬_알고리즘.md
@@ -4,8 +4,8 @@
 
 ### 선택 정렬 (Selection Sort)
 - 배열의 최소값(또는 최대값)을 찾아 맨 앞(또는 맨 뒤)와 교환하는 방법
-- 시간 복잡도 : 최악, 평균 O(n^2)
-- 공간 복잡도 : O(1)
+- __시간 복잡도__ : 최악, 평균 O(n^2)
+- __공간 복잡도__ : O(1)
 ```cs
 int[] arr = new int[] { 5, 2, 4, 6, 1, 3 };
 
@@ -34,8 +34,8 @@ foreach (int num in arr)
 
 ### 삽입 정렬 (Insertion Sort)
 - 정렬되지 않은 부분에서 요소를 가져와 정렬된 부분의 적절한 위치에 삽입하는 방법
-- 시간 복잡도 : 최악 O(n^2), 최선 O(n)
-- 공간 복잡도 : O(1)
+- __시간 복잡도__ : 최악 O(n^2), 최선 O(n)
+- __공간 복잡도__ : O(1)
 ```cs
 int[] arr = new int[] {5, 2, 4, 6, 1, 3};
 
@@ -61,8 +61,8 @@ foreach (int num in arr)
 
 ### 퀵 정렬 (Quick Sort)
 - pivot을 기준으로 작은 요소들은 왼쪽, 큰 요소들은 오른쪽으로 분할하고 이를 재귀적으로 정렬하는 방법
-- 시간 복잡도 : 최악 O(n^2), 평균 O(nlogn)
-- 공간 복잡도 : 평균 O(logn), 최악 O(n) (재귀호출에 필요한 스택 공간)
+- __시간 복잡도__ : 최악 O(n^2), 평균 O(nlogn)
+- __공간 복잡도__ : 평균 O(logn), 최악 O(n) (재귀호출에 필요한 스택 공간)
 ```cs
 static void Swap(int[] arr, int i, int j)
 {
@@ -120,8 +120,8 @@ static void Main(string[] args)
 
 ### 병합 정렬 (Merge Sort)
 - 배열을 반으로 나누고, 각 부분을 재귀적으로 정렬한 후 병합하는 방법
-- 시간 복잡도 : 모든 경우 O(nlogn)
-- 공간 복잡도 : O(n) (정렬을 위한 임시 배열 필요)
+- __시간 복잡도__ : 모든 경우 O(nlogn)
+- __공간 복잡도__ : O(n) (정렬을 위한 임시 배열 필요)
 ```cs
 void MergeSort(int[] arr, int left, int right)
 {
